--- a/index.html
+++ b/index.html
@@ -123,17 +123,17 @@
             <div tempo="3000">
                 <p>e deixar sua vida mais feliz</p>
             </div>
-            <div tempo="3000">
+            <div tempo="6000">
                 <p>Eu agradeço muito a deus (se ele existir e claro), por ter colocado eu exatamente naquele dia dentro do joguinho de fada.</p>
             </div>
-            <div tempo="6000" final="true">
+            <div tempo="3000" final="true">
                 <p>Estou com muita saudades❤️ ❤️ ❤️</p>
             </div>
         </div>
 
         <div id="tela8" class="tela-centro tela" fundo="fundo4" tempo="6000">
          
-            <p>Agora vamos ver algumas fotinhas que esta pessoa esteve comigo e me fez feliz</p>
+            <p>Agora vamos ver algumas fotinhas que esta pessoa linda e especial esteve comigo </p>
 
             <button class="mudaTela btn-rosa">Continuar</button>
 
